--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</section>
 
 		<section>
-			<img class="image" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" >
+			<img class="image" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" alt="image">
 		</section>
 
 		<section>
